clang/test/BSC/Negative/Ownership/Owned/owned_trait_cast/owned_trait_cast.cbs
// RUN: %clang_cc1 -verify %s

_Trait T {
  _Safe void do_it(This* _Owned this);
  void do_that(This* this);
  _Safe void do_this(This* _Borrow this);
};

_Safe void int::do_it(int* _Owned this) {
  _Unsafe { int* x = (int*)this; }
}

void int::do_that(int* this) {
}

_Safe void int::do_this(int* _Borrow this) {
}

_Impl _Trait T for int;

void cast1() {
  int x = 1;
  _Trait T* t1 = &x;
  _Trait T* t2 = t1;
}

void cast2() {
  int x = 1;
  _Trait T* _Owned t1 = (int* _Owned)&x;
  _Trait T* _Owned t2 = t1;
} // expected-error {{field memory leak of value: `t2`, t2.data is leak}}

void cast3() {
  int x = 1;
  _Trait T* _Borrow t1 = &_Mut x;
  _Trait T* _Borrow t2 = t1;
}
